chore: format invenio.cfg

--- a/demo-inveniordm/invenio.cfg
+++ b/demo-inveniordm/invenio.cfg
@@ -12,7 +12,6 @@ Only configuration created via cookiecutter or very likely to be edited
 by installer are included here.
 """
 
-import os
 from invenio_oauthclient.contrib.keycloak import KeycloakSettingsHelper
 from invenio_oauthclient.contrib.orcid import ORCIDOAuthSettingsHelper
 
@@ -21,18 +20,20 @@ from invenio_oauthclient.contrib.orcid import ORCIDOAuthSettingsHelper
 # See https://flask.palletsprojects.com/en/1.1.x/config/
 
 # SECURITY WARNING: keep the secret key used in production secret!
-SECRET_KEY="CHANGE_ME"
+SECRET_KEY = "CHANGE_ME"
 # Since HAProxy and Nginx route all requests no matter the host header
 # provided, the allowed hosts variable is set to localhost. In production it
 # should be set to the correct host and it is strongly recommended to only
 # route correct hosts to the application.
-APP_ALLOWED_HOSTS = ['0.0.0.0', 'localhost', '127.0.0.1']
+APP_ALLOWED_HOSTS = ["0.0.0.0", "localhost", "127.0.0.1"]
 
 
 # Flask-SQLAlchemy
 # ================
 # See https://flask-sqlalchemy.palletsprojects.com/en/2.x/config/
-SQLALCHEMY_DATABASE_URI="postgresql+psycopg2://demo-inveniordm:demo-inveniordm@localhost/demo-inveniordm"
+SQLALCHEMY_DATABASE_URI = (
+    "postgresql+psycopg2://demo-inveniordm:demo-inveniordm@localhost/demo-inveniordm"
+)
 
 
 # Invenio-App
@@ -40,28 +41,28 @@ SQLALCHEMY_DATABASE_URI="postgresql+psycopg2://demo-inveniordm:demo-inveniordm@l
 # See https://invenio-app.readthedocs.io/en/latest/configuration.html
 
 APP_DEFAULT_SECURE_HEADERS = {
-    'content_security_policy': {
-        'default-src': [
+    "content_security_policy": {
+        "default-src": [
             "'self'",
-            'data:', # for fonts
+            "data:",  # for fonts
             "'unsafe-inline'",  # for inline scripts and styles
-            "blob:",            # for pdf preview
+            "blob:",  # for pdf preview
             # Add your own policies here (e.g. analytics)
         ],
     },
-    'content_security_policy_report_only': False,
-    'content_security_policy_report_uri': None,
-    'force_file_save': False,
-    'force_https': True,
-    'force_https_permanent': False,
-    'frame_options': 'sameorigin',
-    'frame_options_allow_from': None,
-    'session_cookie_http_only': True,
-    'session_cookie_secure': True,
-    'strict_transport_security': True,
-    'strict_transport_security_include_subdomains': True,
-    'strict_transport_security_max_age': 31556926,  # One year in seconds
-    'strict_transport_security_preload': False,
+    "content_security_policy_report_only": False,
+    "content_security_policy_report_uri": None,
+    "force_file_save": False,
+    "force_https": True,
+    "force_https_permanent": False,
+    "frame_options": "sameorigin",
+    "frame_options_allow_from": None,
+    "session_cookie_http_only": True,
+    "session_cookie_secure": True,
+    "strict_transport_security": True,
+    "strict_transport_security_include_subdomains": True,
+    "strict_transport_security_max_age": 31556926,  # One year in seconds
+    "strict_transport_security_preload": False,
 }
 
 
@@ -70,9 +71,9 @@ APP_DEFAULT_SECURE_HEADERS = {
 # See https://pythonhosted.org/Flask-Babel/#configuration
 
 # Default locale (language)
-BABEL_DEFAULT_LOCALE = 'en'
+BABEL_DEFAULT_LOCALE = "en"
 # Default time zone
-BABEL_DEFAULT_TIMEZONE = 'Europe/Zurich'
+BABEL_DEFAULT_TIMEZONE = "Europe/Zurich"
 
 
 # Invenio-I18N
@@ -91,9 +92,9 @@ BABEL_DEFAULT_TIMEZONE = 'Europe/Zurich'
 # Frontpage title
 THEME_FRONTPAGE_TITLE = "Welcome to InvenioRDM's Sandbox!"
 # Frontpage template
-THEME_FRONTPAGE_TEMPLATE = 'demo_inveniordm/demo_frontpage.html'
+THEME_FRONTPAGE_TEMPLATE = "demo_inveniordm/demo_frontpage.html"
 # Header logo
-THEME_LOGO="images/invenio-rdm.svg"
+THEME_LOGO = "images/invenio-rdm.svg"
 # Site tracking code template for matomo analytics
 # Enable the below on the dedicated environment
 # THEME_TRACKINGCODE_TEMPLATE = "demo_inveniordm/trackingcode-prod.html"
@@ -104,15 +105,13 @@ THEME_LOGO="images/invenio-rdm.svg"
 # See https://invenio-app-rdm.readthedocs.io/en/latest/configuration.html
 
 # Instance's theme entrypoint file. Path relative to the ``assets/`` folder.
-INSTANCE_THEME_FILE = './less/theme.less'
+INSTANCE_THEME_FILE = "./less/theme.less"
 
 # For invenio-vocabularies
 JSONSCHEMAS_HOST = "localhost"
 
 # admin user password
-RDM_RECORDS_USER_FIXTURE_PASSWORDS = {
-    'admin@inveniosoftware.org': '123456'
-}
+RDM_RECORDS_USER_FIXTURE_PASSWORDS = {"admin@inveniosoftware.org": "123456"}
 
 # Invenio-Records-Resources
 # =========================
@@ -139,7 +138,7 @@ _keycloak_helper = KeycloakSettingsHelper(
     description="CERN SSO authentication",
     base_url="https://auth.cern.ch/",
     realm="cern",
-    app_key="CERN_APP_CREDENTIALS"
+    app_key="CERN_APP_CREDENTIALS",
 )
 OAUTHCLIENT_CERN_REALM_URL = _keycloak_helper.realm_url
 OAUTHCLIENT_CERN_USER_INFO_URL = _keycloak_helper.user_info_url
@@ -149,13 +148,13 @@ OAUTHCLIENT_CERN_VERIFY_AUD = False
 _orcid_sandbox_app = ORCIDOAuthSettingsHelper(
     title="ORCID (Sandbox)",
     description="ORCID (Sandbox) - Connecting Research and Researchers.",
-    base_url='https://pub.sandbox.orcid.org/',
-    access_token_url='https://sandbox.orcid.org/oauth/token',
-    authorize_url='https://sandbox.orcid.org/oauth/authorize#show_login',
+    base_url="https://pub.sandbox.orcid.org/",
+    access_token_url="https://sandbox.orcid.org/oauth/token",
+    authorize_url="https://sandbox.orcid.org/oauth/authorize#show_login",
 )
 
 OAUTHCLIENT_REMOTE_APPS = {
-#    "cern": _keycloak_helper.remote_app,  # CERN login disabled
+    #    "cern": _keycloak_helper.remote_app,  # CERN login disabled
     "orcid": _orcid_sandbox_app.remote_app,
 }
 
@@ -183,35 +182,32 @@ SEARCH_INDEX_PREFIX = "demo-inveniordm-"
 # =============
 
 from invenio_i18n import lazy_gettext as _
+from invenio_rdm_records.config import RDM_FACETS, RDM_SEARCH
+from invenio_rdm_records.services.schemas.metadata import _valid_url
 from invenio_records_resources.services.custom_fields import (
-    BaseCF,
     BooleanCF,
     DoubleCF,
     EDTFDateStringCF,
     IntegerCF,
     ISODateStringCF,
-    KeywordCF,
     TextCF,
 )
 from invenio_records_resources.services.records.facets import CFTermsFacet
-from invenio_rdm_records.config import RDM_FACETS, RDM_SEARCH
-from invenio_rdm_records.services.schemas.metadata import _valid_url
 from invenio_vocabularies.services.custom_fields import VocabularyCF
 from invenio_vocabularies.services.facets import VocabularyLabels
-from marshmallow_utils.fields.edtfdatestring import EDTFValidator
 from marshmallow import ValidationError
+from marshmallow_utils.fields.edtfdatestring import EDTFValidator
 
 #
 # Namespaces
 #
 
-RDM_NAMESPACES = {
-    "rdm": "https://inveniordm.docs.cern.ch"
-}
+RDM_NAMESPACES = {"rdm": "https://inveniordm.docs.cern.ch"}
 
 #
 # Records custom fields
 #
+
 
 def _validate_release_year(value):
     """Accept only edtf year values i.e YYYY."""
@@ -219,6 +215,7 @@ def _validate_release_year(value):
     _value = _validate(value)
     if not _value.isdigit():
         raise ValidationError("Please provide a valid year.", field_name="release_year")
+
 
 RDM_CUSTOM_FIELDS = [
     TextCF(
@@ -235,17 +232,16 @@ RDM_CUSTOM_FIELDS = [
         name="rdm:programming_languages",
         vocabulary_id="programminglanguages",
         dump_options=True,
-        multiple=True
+        multiple=True,
     ),
     EDTFDateStringCF(
-        name="rdm:release_year",
-        field_args={"validate": _validate_release_year}
+        name="rdm:release_year", field_args={"validate": _validate_release_year}
     ),
     ISODateStringCF(name="rdm:release_date"),
     TextCF(name="rdm:release_notes"),
     IntegerCF(name="rdm:release_number_of_lines"),
     DoubleCF(name="rdm:release_test_percentage"),
-    BooleanCF(name="rdm:lts_release")
+    BooleanCF(name="rdm:lts_release"),
 ]
 
 RDM_CUSTOM_FIELDS_UI = [
@@ -260,7 +256,7 @@ RDM_CUSTOM_FIELDS_UI = [
                     placeholder="https://your.repository.url",
                     icon="linkify",
                     description="URL of the repository where the software is hosted.",
-                )
+                ),
             ),
             dict(
                 field="rdm:development_status",
@@ -272,8 +268,8 @@ RDM_CUSTOM_FIELDS_UI = [
                     description="Find more at repostatus.org",
                     search=False,
                     multiple=False,
-                    clearable=True
-                )
+                    clearable=True,
+                ),
             ),
             dict(
                 field="rdm:programming_languages",
@@ -286,7 +282,7 @@ RDM_CUSTOM_FIELDS_UI = [
                     autocompleteFrom="/api/vocabularies/programminglanguages",
                     clearable=True,
                     multiple=True,
-                )
+                ),
             ),
             dict(
                 field="rdm:release_year",
@@ -296,7 +292,7 @@ RDM_CUSTOM_FIELDS_UI = [
                     placeholder="Release year (EDTF date of format YYYY).",
                     icon="calendar",
                     description="Format: DATE where DATE is YYYY.",
-                )
+                ),
             ),
             dict(
                 field="rdm:release_date",
@@ -306,7 +302,7 @@ RDM_CUSTOM_FIELDS_UI = [
                     placeholder="Release date in ISO format (YYYY-MM-DD).",
                     icon="calendar",
                     description="Format: YYYY-MM-DD.",
-                )
+                ),
             ),
             dict(
                 field="rdm:release_notes",
@@ -316,9 +312,9 @@ RDM_CUSTOM_FIELDS_UI = [
                     placeholder="Added new feature X...",
                     icon="book",
                     description="Changes made in the release.",
-                )
+                ),
             ),
-             dict(
+            dict(
                 field="rdm:release_number_of_lines",
                 ui_widget="NumberInput",
                 props=dict(
@@ -326,7 +322,7 @@ RDM_CUSTOM_FIELDS_UI = [
                     placeholder="Number of lines in code.",
                     icon="calculator",
                     description="Insert the integer number of code lines changed in this release.",
-                )
+                ),
             ),
             dict(
                 field="rdm:release_test_percentage",
@@ -336,7 +332,7 @@ RDM_CUSTOM_FIELDS_UI = [
                     placeholder="Release test coverage (e.g 95,75).",
                     icon="calculator",
                     description="Format: double number.",
-                )
+                ),
             ),
             dict(
                 field="rdm:lts_release",
@@ -347,9 +343,9 @@ RDM_CUSTOM_FIELDS_UI = [
                     falseLabel="No",
                     icon="tag",
                     description="Mark if this is a Long Term Support release (LTS).",
-                )
-            )
-        ]
+                ),
+            ),
+        ],
     }
 ]
 
@@ -379,15 +375,14 @@ RDM_FACETS = {
 
 RDM_SEARCH = {
     **RDM_SEARCH,
-    "facets": RDM_SEARCH["facets"] + ["programming_language", "development_status"]
+    "facets": RDM_SEARCH["facets"] + ["programming_language", "development_status"],
 }
 
 
+#
+# Communities
+#
 COMMUNITIES_ADMINISTRATION_DISABLED = False
-#
-# Communities custom fields
-#
-
 COMMUNITIES_CUSTOM_FIELDS = [
     TextCF(
         name="rdm:external_url",
@@ -409,7 +404,7 @@ COMMUNITIES_CUSTOM_FIELDS_UI = [
                     placeholder="https://your.community.url",
                     icon="linkify",
                     description="External URL of the community...",
-                )
+                ),
             ),
             dict(
                 field="rdm:policy",
@@ -419,15 +414,15 @@ COMMUNITIES_CUSTOM_FIELDS_UI = [
                     placeholder="For a record to be accepted into this community it must...",
                     icon="pencil",
                     description="Conditions for a record to be accepted into the community",
-                )
+                ),
             ),
-        ]
+        ],
     }
 ]
 
 # JOBS
 
-INVENIO_JOBS_ADMINISTRATION_ENABLED=True
+INVENIO_JOBS_ADMINISTRATION_ENABLED = True
 
 # AUDIT LOGS
 
