config: enable communities "Browse" tab

--- a/demo-inveniordm/invenio.cfg
+++ b/demo-inveniordm/invenio.cfg
@@ -383,6 +383,7 @@ RDM_SEARCH = {
 # Communities
 #
 COMMUNITIES_ADMINISTRATION_DISABLED = False
+COMMUNITIES_SHOW_BROWSE_MENU_ENTRY = True
 COMMUNITIES_CUSTOM_FIELDS = [
     TextCF(
         name="rdm:external_url",
