fixtures: enable demo user for local development

--- a/app_data/users.yaml
+++ b/app_data/users.yaml
@@ -1,3 +1,6 @@
 - email: user@demo.org
-  active: False
-  password:
+  username: "demo"
+  full_name: "Demo User"
+  active: true
+  confirmed: true
+  password: "123456"
