--- a/invenio.cfg
+++ b/invenio.cfg
@@ -25,7 +25,7 @@ SECRET_KEY = "CHANGE_ME"
 # provided, the allowed hosts variable is set to localhost. In production it
 # should be set to the correct host and it is strongly recommended to only
 # route correct hosts to the application.
-APP_ALLOWED_HOSTS = ["0.0.0.0", "localhost", "127.0.0.1"]
+TRUSTED_HOSTS = ["0.0.0.0", "localhost", "127.0.0.1"]
 
 
 # Flask-SQLAlchemy
@@ -421,12 +421,10 @@ COMMUNITIES_CUSTOM_FIELDS_UI = [
     }
 ]
 
-# JOBS
+# Audit logs
+AUDIT_LOGS_ENABLED = True
 
-INVENIO_JOBS_ADMINISTRATION_ENABLED = True
-
-# AUDIT LOGS
-
-INVENIO_AUDIT_LOGS_ENABLED = True
+# FAIR Signposting
+APP_RDM_RECORD_LANDING_PAGE_FAIR_SIGNPOSTING_LEVEL_1_ENABLED = True
 
 REST_ENABLE_CORS = True
